<resources>
    <string name="app_name">Mojeeb</string>
    <string name="hello_user">Hello %s</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_my_account">My Account</string>
    <string name="title_order_history">My Orders</string>
    <!-- AIzaSyB9xF6JyVKLjot74UU0ATnIKPVrz46mpVQ -->

    <string name="facebook_app_id">1894998860763972</string>
    <string name="fb_login_protocol_scheme">fb1894998860763972</string>


    <string name="com.twitter.sdk.android.CONSUMER_KEY">GHwGRNqhLzW5hU06y8BDHBsJq</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">LL4LK333VDTcz6i6p7puW6aLU0OTxTIk5LKzqACW1b0lwCP40A</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>

</resources>
