<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_order_history"
        android:icon="@drawable/ic_history_black_24dp"
        android:title="@string/title_order_history" />

    <item
        android:id="@+id/navigation_my_account"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/title_my_account" />
</menu>
